--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <body>
         <h1>Recetas de Odin</h1>
         <p>
-            <a href="recipes/moussaka.html">moussaka</a>
+            <ul>
+                <li><a href="recipes/moussaka.html">Moussaka</a></li>
+                <li><a href="recipes/Spaghetti.html">Spaghetti</a></li>
+                <li><a href=""></a></li>
+            </ul>
         </p>
     </body>
 </head>
