jugando con css

--- a/recipes/moussaka.html
+++ b/recipes/moussaka.html
@@ -2,16 +2,18 @@
 <head>
     <meta charset="utf-8">
     <title>Moussaka</title>
-    <body>
-        <h1>Moussaka</h1>
-        <p>
+    <body style="background-color: rgb(238, 236, 223);">
+        <h1 style="font-size: 40px; color: chocolate; font-family: Verdana, Geneva, Tahoma, sans-serif;">Moussaka</h1>
+        <p style="font-size: 21px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
             This moussaka tastes great! Layers of sliced eggplant are baked
             in a ground beef sauce and smothered in a creamy white bechamel sauce in
             this classic Greek dish.
         </p>
+        <br>
         <p>
-            <h2>Ingredients</h2>
-            <ul>
+            <h2 style="font-size: 26px;">Ingredients</h2>
+            <br>
+            <ul style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
                 <li>3 eggplants, peeled and cut lengthwise into 1/2 inch thick slices</li>
                 <li>Salt to taste</li>
                 <li>1/4 cup olive oil</li>
@@ -34,8 +36,9 @@
                 <li>1 1/2 cups freshly grated Parmesan cheese</li>
             </ul>
         </p>
-        <hr>
-        <h2><strong>Directions</strong></h2>
+        <br>
+        <h2 style="font-size: 20px;"><strong>Directions</strong></h2>
+        <br>
         <p><b>Step 1</b></p>
         <p>Lay eggplant slices on paper towels; sprinkle lightly 
             with salt. Let sit for 30 minutes to draw out moisture, then pat dry with paper towels.
