--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <head>
     <meta charset="utf-8">
     <title>Recetas</title>
-    <body>
-        <h1>Recetas de Odin</h1>
+</head>
+<body>
+    <h1 style="color: coral; font-size: 30px;">Recetas de Odin</h1>
+    <div class ="uno">
         <p>
             <ul>
                 <li><a href="recipes/moussaka.html">Moussaka</a></li>
@@ -11,5 +13,5 @@
                 <li><a href=""></a></li>
             </ul>
         </p>
-    </body>
-</head>
+    </div>
+</body>
