--- a/recipes/moussaka.html
+++ b/recipes/moussaka.html
@@ -2,48 +2,51 @@
 <head>
     <meta charset="utf-8">
     <title>Moussaka</title>
-    <body style="background-color: rgb(238, 236, 223);">
-        <h1 style="font-size: 40px; color: chocolate; font-family: Verdana, Geneva, Tahoma, sans-serif;">Moussaka</h1>
+    <link rel="stylesheet" href="../css/style.css">
+</head>
+<body">
+    <h1>Moussaka</h1>
+    <div>
         <p style="font-size: 21px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
             This moussaka tastes great! Layers of sliced eggplant are baked
             in a ground beef sauce and smothered in a creamy white bechamel sauce in
             this classic Greek dish.
         </p>
+    </div>
+    <br>
+    <p>
+        <h2 style="font-size: 26px;">Ingredients</h2>
         <br>
-        <p>
-            <h2 style="font-size: 26px;">Ingredients</h2>
-            <br>
-            <ul style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-                <li>3 eggplants, peeled and cut lengthwise into 1/2 inch thick slices</li>
-                <li>Salt to taste</li>
-                <li>1/4 cup olive oil</li>
-                <li>1 tablespoon butter</li>
-                <li>1 pound lean ground beef</li>
-                <li>2 onions, chopped</li>
-                <li>1 clove garlic, minced</li>
-                <li>Ground black pepper to taste</li>
-                <li>2 tablespoons dried parsley</li>
-                <li>1/2 teaspoon fines herbs</li>
-                <li>1/4 teaspoon ground cinnamon</li>
-                <li>1/2 teaspoon ground nutmeg, divided</li>
-                <li>1 (8 ounce) can tomato sauce</li>
-                <li>1/2 cup red wine</li>
-                <li>1 egg, beaten</li>
-                <li>4 cups milk</li>
-                <li>1/2 cup butter</li>
-                <li>6 tablespoons all-purpose flour</li>
-                <li>Ground white pepper, to taste</li>
-                <li>1 1/2 cups freshly grated Parmesan cheese</li>
-            </ul>
-        </p>
-        <br>
-        <h2 style="font-size: 20px;"><strong>Directions</strong></h2>
-        <br>
-        <p><b>Step 1</b></p>
-        <p>Lay eggplant slices on paper towels; sprinkle lightly 
-            with salt. Let sit for 30 minutes to draw out moisture, then pat dry with paper towels.
-        </p>
-        <img src="https://www.allrecipes.com/thmb/SkowRa2lhaHJi4nADwXPK4lREcM=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/19644-Moussaka-ddmps-step-1-4x3-104480-b1146d3a8bf8481886915ee36f6cdb48.jpg" alt="que rico!"
-        height="314" width="500">
-    </body>
-</head>
+        <ul style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+            <li>3 eggplants, peeled and cut lengthwise into 1/2 inch thick slices</li>
+            <li>Salt to taste</li>
+            <li>1/4 cup olive oil</li>
+            <li>1 tablespoon butter</li>
+            <li>1 pound lean ground beef</li>
+            <li>2 onions, chopped</li>
+            <li>1 clove garlic, minced</li>
+            <li>Ground black pepper to taste</li>
+            <li>2 tablespoons dried parsley</li>
+            <li>1/2 teaspoon fines herbs</li>
+            <li>1/4 teaspoon ground cinnamon</li>
+            <li>1/2 teaspoon ground nutmeg, divided</li>
+            <li>1 (8 ounce) can tomato sauce</li>
+            <li>1/2 cup red wine</li>
+            <li>1 egg, beaten</li>
+            <li>4 cups milk</li>
+            <li>1/2 cup butter</li>
+            <li>6 tablespoons all-purpose flour</li>
+            <li>Ground white pepper, to taste</li>
+            <li>1 1/2 cups freshly grated Parmesan cheese</li>
+        </ul>
+    </p>
+    <br>
+    <h2 style="font-size: 20px;"><strong>Directions</strong></h2>
+    <br>
+    <p><b>Step 1</b></p>
+    <p>Lay eggplant slices on paper towels; sprinkle lightly 
+        with salt. Let sit for 30 minutes to draw out moisture, then pat dry with paper towels.
+    </p>
+    <img src="https://www.allrecipes.com/thmb/SkowRa2lhaHJi4nADwXPK4lREcM=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/19644-Moussaka-ddmps-step-1-4x3-104480-b1146d3a8bf8481886915ee36f6cdb48.jpg" alt="que rico!"
+    height="314" width="500">
+</body>
