--- a/recipes/moussaka.html
+++ b/recipes/moussaka.html
@@ -6,7 +6,7 @@
 </head>
 <body">
     <h1>Moussaka</h1>
-    <div>
+    <div class="top-section">
         <p style="font-size: 21px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
             This moussaka tastes great! Layers of sliced eggplant are baked
             in a ground beef sauce and smothered in a creamy white bechamel sauce in
