--- a/recipes/moussaka.html
+++ b/recipes/moussaka.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body">
-    <h1>Moussaka</h1>
+    <h1 class="titulo">Moussaka</h1>
     <div class="top-section">
         <p style="font-size: 21px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
             This moussaka tastes great! Layers of sliced eggplant are baked
@@ -13,8 +13,11 @@
             this classic Greek dish.
         </p>
     </div>
+    <!--This is a html comment-->
     <br>
     <p>
+        <img src="https://www.allrecipes.com/thmb/SkowRa2lhaHJi4nADwXPK4lREcM=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/19644-Moussaka-ddmps-step-1-4x3-104480-b1146d3a8bf8481886915ee36f6cdb48.jpg" alt="que rico!"
+    height="314" width="500">
         <h2 style="font-size: 26px;">Ingredients</h2>
         <br>
         <ul style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
@@ -47,6 +50,4 @@
     <p>Lay eggplant slices on paper towels; sprinkle lightly 
         with salt. Let sit for 30 minutes to draw out moisture, then pat dry with paper towels.
     </p>
-    <img src="https://www.allrecipes.com/thmb/SkowRa2lhaHJi4nADwXPK4lREcM=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/19644-Moussaka-ddmps-step-1-4x3-104480-b1146d3a8bf8481886915ee36f6cdb48.jpg" alt="que rico!"
-    height="314" width="500">
 </body>
