--- a/recipes/Spaghetti.html
+++ b/recipes/Spaghetti.html
@@ -3,8 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Spaghetti</title>
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
     <body>
+        <header class="topbar">
+            <nav>
+                <ul>
+                    <li>Inicio</li>
+                    <li>Siguiente</li>
+                    <li>Anterior</li>
+                </ul>
+            </nav>
+        </header>
 
         <img src="https://www.allrecipes.com/thmb/dsZLQc6y3EWUjSahZkQqqgVerP8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4511209_-Cubanelle-and-Veal-Bolognese-Photo-by-Buckwheat-Queen-161357d03b224814996c46e44712c147.jpg" alt="que rico"
         height="314" width="500">
