--- a/recipes/Spaghetti.html
+++ b/recipes/Spaghetti.html
@@ -9,9 +9,8 @@
         <header class="topbar">
             <nav>
                 <ul>
-                    <li>Inicio</li>
-                    <li>Siguiente</li>
-                    <li>Anterior</li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../recipes/moussaka.html">Siguiente</a></li>
                 </ul>
             </nav>
         </header>
