--- a/recipes/Spaghetti.html
+++ b/recipes/Spaghetti.html
@@ -5,7 +5,7 @@
         <title>Spaghetti</title>
         <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
-    <body>
+    <body class="sp_body">
         <header class="topbar">
             <nav>
                 <ul>
