--- a/recipes/Spaghetti.html
+++ b/recipes/Spaghetti.html
@@ -14,34 +14,35 @@
                 </ul>
             </nav>
         </header>
-
-        <img src="https://www.allrecipes.com/thmb/dsZLQc6y3EWUjSahZkQqqgVerP8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4511209_-Cubanelle-and-Veal-Bolognese-Photo-by-Buckwheat-Queen-161357d03b224814996c46e44712c147.jpg" alt="que rico"
-        height="314" width="500">
-        <p>
-            A simple, slowly cooked meat sauce is comfort food of the highest order.
-             Here are 9 of our very favorite recipes. Saucy, rich, and meaty,
-              these spaghetti sauces are made with deliciously different meat combinations
-               — some are all ground beef; others beef and sausage; veal and beef;
-                ground pork and beef; and even one that calls for pork spareribs and chicken thighs.
-        </p>
-        <p>
-            <h2>Ingredientes:</h2>
-            <ul>
-                <li>1/2 cup butter</li>
-                <li>3 tablespoons olive oil</li>
-                <li>1 large onion, chopped</li>
-                <li>3 cloves garlic, chopped</li>
-                <li>1 pound ground beef</li>
-                <li>1 pound mild sausage</li>
-                <li>4 teaspoons Italian seasoning</li>
-                <li>2 teaspoons salt (Opcional)</li>
-                <li>2 teaspoons dried rosemary</li>
-                <li>1 1/2 teaspoons dried oregano</li>
-                <li>1/2 teaspoon ground black pepper</li>
-                <li>76 fluid ounces water</li>
-                <li>1 (29 ounce) can tomato puree</li>
-                <li>3 (6 ounce) cans tomato paste</li>
-            </ul>
-        </p>
+        <div class="recipe">
+            <img src="https://www.allrecipes.com/thmb/dsZLQc6y3EWUjSahZkQqqgVerP8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4511209_-Cubanelle-and-Veal-Bolognese-Photo-by-Buckwheat-Queen-161357d03b224814996c46e44712c147.jpg" alt="que rico"
+            height="214" width="350" class="recipe-img">
+            <p>
+                A simple, slowly cooked meat sauce is comfort food of the highest order.
+                Here are 9 of our very favorite recipes. Saucy, rich, and meaty,
+                these spaghetti sauces are made with deliciously different meat combinations
+                — some are all ground beef; others beef and sausage; veal and beef;
+                    ground pork and beef; and even one that calls for pork spareribs and chicken thighs.
+            </p>
+            <p>
+                <h2>Ingredientes:</h2>
+                <ul>
+                    <li>1/2 cup butter</li>
+                    <li>3 tablespoons olive oil</li>
+                    <li>1 large onion, chopped</li>
+                    <li>3 cloves garlic, chopped</li>
+                    <li>1 pound ground beef</li>
+                    <li>1 pound mild sausage</li>
+                    <li>4 teaspoons Italian seasoning</li>
+                    <li>2 teaspoons salt (Opcional)</li>
+                    <li>2 teaspoons dried rosemary</li>
+                    <li>1 1/2 teaspoons dried oregano</li>
+                    <li>1/2 teaspoon ground black pepper</li>
+                    <li>76 fluid ounces water</li>
+                    <li>1 (29 ounce) can tomato puree</li>
+                    <li>3 (6 ounce) cans tomato paste</li>
+                </ul>
+            </p>
+        </div>
     </body>
 </html>
