--- a/figma/index.html
+++ b/figma/index.html
@@ -3,18 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Mi web!</title>
+        <link rel="stylesheet" href="stylesheet/style.css">
     </head>
     <body>
-        <header>
-            <div>
-                <img src="" alt="">
-                <a href="">Pricing</a>
-                <a href="">Courses</a>
-                <a href="">Blog</a>
-                <a href="">Forum</a>
+        <header class="bg-gray-900">
+            <div class="flex justify-between">
+                <img src="logo.svg" alt="">
+                <a href="" class="text-white">Pricing</a>
+                <a href="" class="text-white">Courses</a>
+                <a href="" class="text-white">Blog</a>
+                <a href="" class="text-white">Forum</a>
             </div>
             <div>
-                <a href="">Login</a>
+                <a href="" class="text-white block">Login</a>
+                <button>Sign Up</button>
             </div>
         </header>
     </body>
