adding maring to login

--- a/figma/index.html
+++ b/figma/index.html
@@ -6,16 +6,17 @@
         <link rel="stylesheet" href="stylesheet/style.css">
     </head>
     <body>
-        <header class="bg-gray-900">
-            <div class="flex justify-between">
-                <img src="logo.svg" alt="">
-                <a href="" class="text-white">Pricing</a>
-                <a href="" class="text-white">Courses</a>
-                <a href="" class="text-white">Blog</a>
-                <a href="" class="text-white">Forum</a>
+        <header class="bg-gray-900 flex justify-between py-18"
+        style="padding: 18px 12px;">
+            <div class="flex justify-center items-center">
+                <img src="logo.svg" alt="" style="margin-right: 50px;">
+                <a href="" class="text-white py-8 px-16">Pricing</a>
+                <a href="" class="text-white py-8 px-16">Courses</a>
+                <a href="" class="text-white py-8 px-16">Blog</a>
+                <a href="" class="text-white py-8 px-16">Forum</a>
             </div>
-            <div>
-                <a href="" class="text-white block">Login</a>
+            <div class="flex items-center">
+                <a href="" class="text-white" style="margin-right: 50px;">Login</a>
                 <button>Sign Up</button>
             </div>
         </header>
