--- a/figma/index.html
+++ b/figma/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
         <meta charset="utf-8">
         <title>Mi web!</title>
         <link rel="stylesheet" href="stylesheet/style.css">
@@ -16,7 +19,7 @@
                 <a href="" class="text-white py-8 px-16">Forum</a>
             </div>
             <div class="flex items-center">
-                <a href="" class="text-white" style="margin-right: 50px;">Login</a>
+                <a href="" class="text-white py-8 px-16" style="margin-right: 12px;">Login</a>
                 <button>Sign Up</button>
             </div>
         </header>
