--- a/figma/index.html
+++ b/figma/index.html
@@ -4,6 +4,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
         <meta charset="utf-8">
         <title>Mi web!</title>
         <link rel="stylesheet" href="stylesheet/style.css">
@@ -13,14 +14,14 @@
         style="padding: 18px 12px;">
             <div class="flex justify-center items-center">
                 <img src="logo.svg" alt="" style="margin-right: 50px;">
-                <a href="" class="text-white py-8 px-16">Pricing</a>
-                <a href="" class="text-white py-8 px-16">Courses</a>
-                <a href="" class="text-white py-8 px-16">Blog</a>
-                <a href="" class="text-white py-8 px-16">Forum</a>
+                <a href="" class="text-white py-8 px-16 no-underline">Pricing</a>
+                <a href="" class="text-white py-8 px-16 no-underline">Courses</a>
+                <a href="" class="text-white py-8 px-16 no-underline">Blog</a>
+                <a href="" class="text-white py-8 px-16 no-underline">Forum</a>
             </div>
             <div class="flex items-center">
-                <a href="" class="text-white py-8 px-16" style="margin-right: 12px;">Login</a>
-                <button>Sign Up</button>
+                <a href="" class="text-white py-8 px-16 no-underline" style="margin-right: 12px;">Login</a>
+                <button class="bg-brand-teal text-white border-none rounded-full py-8 px-16 font-bold uppercase text-sm py-12 px-28">SIGN UP</button>
             </div>
         </header>
     </body>
