--- a/figma/index.html
+++ b/figma/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="stylesheet/style.css">
     </head>
     <body>
-        <header class="bg-gray-900 flex justify-between py-18"
+        <header class="flex justify-between py-18 relative z-10"
         style="padding: 18px 12px;">
             <div class="flex justify-center items-center">
                 <img src="logo.svg" alt="" style="margin-right: 50px;">
@@ -24,5 +24,24 @@
                 <button class="bg-brand-teal text-white border-none rounded-full py-8 px-16 font-bold uppercase text-sm py-12 px-28">SIGN UP</button>
             </div>
         </header>
+        <section class="relative" style="top: -80px">
+            <video
+             loop="loop" 
+             autoplay="autoplay" 
+             playsinline="" 
+             muted="muted" 
+             class="w-full h-full object-cover" 
+             style="min-height: 550px;"
+             src="./videos/galaxy.mp4"
+             ></video>
+            <!--<img src="./img/hero.png" alt="" class="w-full relative" style="top: -80px"> -->
+            <div class="bg-gray-900" style="max-width: 538px;">
+                <h1 style="font-size: 60px;" class="text-white">TurboCharge your <br> <span class="text-brand-teal">development career</span></h1>
+                <p class="text-white" style="max-width: 449px; font-size: 20px; margin-top: 30px;">Chris Courses provides students and professionals
+                    a college-level web development education.
+                </p>
+                <button style="margin-top: 30px;" class="bg-white text-brand-teal-dark">Get started</button>
+            </div>
+        </section>
     </body>
 </html>
