--- a/figma/index.html
+++ b/figma/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -10,37 +12,69 @@
         <link rel="stylesheet" href="stylesheet/style.css">
     </head>
     <body>
-        <header class="flex justify-between py-18 relative z-10"
-        style="padding: 18px 12px;">
-            <div class="flex justify-center items-center">
-                <img src="logo.svg" alt="" style="margin-right: 50px;">
-                <a href="" class="text-white py-8 px-16 no-underline">Pricing</a>
-                <a href="" class="text-white py-8 px-16 no-underline">Courses</a>
-                <a href="" class="text-white py-8 px-16 no-underline">Blog</a>
-                <a href="" class="text-white py-8 px-16 no-underline">Forum</a>
-            </div>
-            <div class="flex items-center">
-                <a href="" class="text-white py-8 px-16 no-underline" style="margin-right: 12px;">Login</a>
-                <button class="bg-brand-teal text-white border-none rounded-full py-8 px-16 font-bold uppercase text-sm py-12 px-28">SIGN UP</button>
-            </div>
-        </header>
-        <section class="relative" style="top: -80px">
+        <div class="relative">
+            <div class="absolute inset-0 opacity-50 z-10 bg-gradient-to-b from-black to-transparent hidden md:block" style="bottom: -35px;"></div>
+            <header class="flex justify-between py-18 relative z-20 mx-auto px-6"
+            style="max-width: 1200px;">
+                <div class="flex justify-center items-center">
+                    <img src="logo.svg" alt="" style="margin-right: 50px;">
+                    <nav class="hidden md:block">
+                        <a href="" class="text-white py-8 px-16 no-underline">Pricing</a>
+                        <a href="" class="text-white py-8 px-16 no-underline">Courses</a>
+                        <a href="" class="text-white py-8 px-16 no-underline">Blog</a>
+                        <a href="" class="text-white py-8 px-16 no-underline">Forum</a>
+                    </nav>
+                </div>
+                <div class="items-center hidden md:flex">
+                    <a href="" class="text-white py-8 px-16 no-underline" style="margin-right: 12px;">Login</a>
+                    <button class="bg-brand-teal text-white border-none rounded-full font-bold uppercase text-sm py-12 px-28">SIGN UP</button>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-white md:hidden">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                </svg>
+            </header>
+        </div>
+        <section class="relative overflow-hidden h-450px md:h-689px" style="top: -80px;">
+            <div class="absolute h-450px md:h-689px" >
+            <div class="bg-black inset-0 absolute z-10 opacity-50 md:hidden"></div>
             <video
-             loop="loop" 
-             autoplay="autoplay" 
-             playsinline="" 
-             muted="muted" 
-             class="w-full h-full object-cover" 
-             style="min-height: 550px;"
-             src="./videos/galaxy.mp4"
-             ></video>
+                loop="loop" 
+                autoplay="autoplay"
+                playsinline="" 
+                muted="muted" 
+                class="w-full h-full object-cover" 
+                src="./videos/galaxy.mp4"
+                ></video>
+            </div>
             <!--<img src="./img/hero.png" alt="" class="w-full relative" style="top: -80px"> -->
-            <div class="bg-gray-900" style="max-width: 538px;">
-                <h1 style="font-size: 60px;" class="text-white">TurboCharge your <br> <span class="text-brand-teal">development career</span></h1>
-                <p class="text-white" style="max-width: 449px; font-size: 20px; margin-top: 30px;">Chris Courses provides students and professionals
-                    a college-level web development education.
-                </p>
-                <button style="margin-top: 30px;" class="bg-white text-brand-teal-dark">Get started</button>
+            <div style="max-width: 1200px;" class="mx-auto pt-24 md:pt-48 px-6">
+                <div class="relative z-10" style="max-width: 538px; top: 0px;">
+                    <h1 class="text-white text-36px sm:text-60px font-bold leading-none">TurboCharge your <br> <span class="text-brand-teal">development career</span></h1>
+                    <p class="text-white text-16px sm\text-20px" style="max-width: 449px; margin-top: 30px;">Chris Courses provides students and professionals
+                        a college-level web development education.
+                    </p>
+                    <button style="margin-top: 30px; border-radius: 8px;" class="bg-white text-brand-teal-dark py-12 px-28 border-none w-full md:w-auto">Get started</button>
+                </div>
+            </div>
+        </section>
+        <!-- stats section -->
+        <section class="bg-gray-900 px-6">
+            <div class="relative z-20" style="top: -100px;">
+                <div class="bg-gray-800 rounded-lg md:flex md:mx-auto md:divide-x md:divide-gray-600" style="max-width: 878px;">
+                    <div class="text-center py-12 border-b md:border-b-0 border-solid border-gray-700 md:w-1/3">
+                        <h2 class="text-purple-300 font-bold text-5xl">84</h2>
+                        <p class="text-gray-300 text-lg">Lessons</p>
+                    </div>
+                    <div class="text-center py-12 border-b border-solid md:border-b-0 border-gray-700 md:w-1/3">
+                        <h2 class="text-purple-300 font-bold text-5xl">29</h2>
+                        <p class="text-gray-300 text-lg">Hours of Content</p>
+                    </div>
+                    <div class="text-center py-12 md:w-1/3">
+                        <h2 class="text-purple-300 font-bold text-5xl">5095</h2>
+                        <p class="text-gray-300 text-lg">Students</p>
+                    </div>
+                </div>
+                <p class="text-gray-500 text-xs text-center mt-4">Metrics update real-time</p>
             </div>
         </section>
     </body>
